--- a/addons/ccm-gcp/ccm-gcp.yaml
+++ b/addons/ccm-gcp/ccm-gcp.yaml
@@ -125,6 +125,19 @@ rules:
   - serviceaccounts/token
   verbs:
   - create
+- apiGroups:
+  - ""
+  resources:
+  - services/status
+  verbs:
+  - patch
+  - update
+- apiGroups:
+  - ""
+  resources:
+  - configmaps
+  verbs:
+  - create
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
