--- a/addons/metrics-server/metrics-server.yaml
+++ b/addons/metrics-server/metrics-server.yaml
@@ -1,26 +1,77 @@
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: system:aggregated-metrics-reader
-  labels:
-    rbac.authorization.k8s.io/aggregate-to-view: "true"
-    rbac.authorization.k8s.io/aggregate-to-edit: "true"
-    rbac.authorization.k8s.io/aggregate-to-admin: "true"
-rules:
-- apiGroups: ["metrics.k8s.io"]
-  resources: ["pods", "nodes"]
-  verbs: ["get", "list", "watch"]
----
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  labels:
+    app.kubernetes.io/instance: metrics-server
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/name: metrics-server
+    app.kubernetes.io/version: 0.7.0
+    helm.sh/chart: metrics-server-3.12.0
   name: metrics-server
   namespace: kube-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  labels:
+    app.kubernetes.io/instance: metrics-server
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/name: metrics-server
+    app.kubernetes.io/version: 0.7.0
+    helm.sh/chart: metrics-server-3.12.0
+  name: system:metrics-server
+rules:
+  - apiGroups:
+      - ""
+    resources:
+      - nodes/metrics
+    verbs:
+      - get
+  - apiGroups:
+      - ""
+    resources:
+      - pods
+      - nodes
+      - namespaces
+      - configmaps
+    verbs:
+      - get
+      - list
+      - watch
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  labels:
+    app.kubernetes.io/instance: metrics-server
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/name: metrics-server
+    app.kubernetes.io/version: 0.7.0
+    helm.sh/chart: metrics-server-3.12.0
+    rbac.authorization.k8s.io/aggregate-to-admin: "true"
+    rbac.authorization.k8s.io/aggregate-to-edit: "true"
+    rbac.authorization.k8s.io/aggregate-to-view: "true"
+  name: system:metrics-server-aggregated-reader
+rules:
+  - apiGroups:
+      - metrics.k8s.io
+    resources:
+      - pods
+      - nodes
+    verbs:
+      - get
+      - list
+      - watch
+---
+apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
+  labels:
+    app.kubernetes.io/instance: metrics-server
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/name: metrics-server
+    app.kubernetes.io/version: 0.7.0
+    helm.sh/chart: metrics-server-3.12.0
   name: metrics-server-auth-reader
   namespace: kube-system
 roleRef:
@@ -35,6 +86,12 @@ subjects:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
+  labels:
+    app.kubernetes.io/instance: metrics-server
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/name: metrics-server
+    app.kubernetes.io/version: 0.7.0
+    helm.sh/chart: metrics-server-3.12.0
   name: metrics-server:system:auth-delegator
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -46,27 +103,14 @@ subjects:
     namespace: kube-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: system:metrics-server
-rules:
-  - apiGroups: [""]
-    resources:
-      - nodes/metrics
-    verbs:
-      - get
-  - apiGroups: [""]
-    resources:
-      - pods
-      - nodes
-    verbs:
-      - get
-      - list
-      - watch
----
-apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
+  labels:
+    app.kubernetes.io/instance: metrics-server
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/name: metrics-server
+    app.kubernetes.io/version: 0.7.0
+    helm.sh/chart: metrics-server-3.12.0
   name: system:metrics-server
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -77,130 +121,154 @@ subjects:
     name: metrics-server
     namespace: kube-system
 ---
-apiVersion: apiregistration.k8s.io/v1
-kind: APIService
-metadata:
-  name: v1beta1.metrics.k8s.io
-spec:
-  service:
-    name: metrics-server
-    namespace: kube-system
-  group: metrics.k8s.io
-  version: v1beta1
-  insecureSkipTLSVerify: true
-  groupPriorityMinimum: 100
-  versionPriority: 100
----
 apiVersion: v1
-kind: Secret
+kind: Service
 metadata:
-  name: metrics-server-serving-cert
+  labels:
+    app.kubernetes.io/instance: metrics-server
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/name: metrics-server
+    app.kubernetes.io/version: 0.7.0
+    helm.sh/chart: metrics-server-3.12.0
+  name: metrics-server
   namespace: kube-system
-data:
-  "cert.pem": |
-{{ .Certificates.MetricsServerCert | b64enc | indent 4 }}
-  "key.pem": |
-{{ .Certificates.MetricsServerKey | b64enc | indent 4 }}
+spec:
+  ports:
+    - name: https
+      port: 443
+      protocol: TCP
+      targetPort: https
+  selector:
+    app.kubernetes.io/instance: metrics-server
+    app.kubernetes.io/name: metrics-server
+  type: ClusterIP
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  labels:
+    app.kubernetes.io/instance: metrics-server
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/name: metrics-server
+    app.kubernetes.io/version: 0.7.0
+    helm.sh/chart: metrics-server-3.12.0
   name: metrics-server
   namespace: kube-system
-  labels:
-    k8s-app: metrics-server
 spec:
+  replicas: 1
   selector:
     matchLabels:
-      k8s-app: metrics-server
-  strategy:
-    rollingUpdate:
-      maxUnavailable: 0
+      app.kubernetes.io/instance: metrics-server
+      app.kubernetes.io/name: metrics-server
   template:
     metadata:
-      name: metrics-server
       labels:
-        k8s-app: metrics-server
+        app.kubernetes.io/instance: metrics-server
+        app.kubernetes.io/name: metrics-server
     spec:
-      tolerations:
-        - key: "node-role.kubernetes.io/master"
-          operator: "Exists"
-          effect: "NoSchedule"
-        - key: "node-role.kubernetes.io/control-plane"
-          operator: "Exists"
-          effect: "NoSchedule"
-      serviceAccountName: metrics-server
-      volumes:
-      # mount in tmp so we can safely use from-scratch images and/or read-only containers
-      - name: tmp-dir
-        emptyDir: {}
-      - name: metrics-server-serving-cert
-        secret:
-          secretName: metrics-server-serving-cert
-      priorityClassName: system-cluster-critical
       containers:
-      - name: metrics-server
-        image: {{ .InternalImages.Get "MetricsServer" }}
-        imagePullPolicy: IfNotPresent
-        args:
-          - --secure-port=4443
-          - --kubelet-insecure-tls
-          - --kubelet-preferred-address-types=InternalIP,InternalDNS,ExternalDNS,ExternalIP
-          - --kubelet-use-node-status-port
-          - --metric-resolution=15s
-          - --tls-cert-file=/etc/serving-cert/cert.pem
-          - --tls-private-key-file=/etc/serving-cert/key.pem
-        resources:
-          requests:
-            cpu: 100m
-            memory: 200Mi
-          limits:
-            cpu: 1
-            memory: 512Mi
-        ports:
-        - name: https
-          containerPort: 4443
-          protocol: TCP
-        readinessProbe:
-          httpGet:
-            path: /readyz
-            port: https
-            scheme: HTTPS
-          periodSeconds: 10
-          failureThreshold: 3
-          initialDelaySeconds: 20
-        livenessProbe:
-          httpGet:
-            path: /livez
-            port: https
-            scheme: HTTPS
-          periodSeconds: 10
-          failureThreshold: 3
-        securityContext:
-          readOnlyRootFilesystem: true
-          runAsNonRoot: true
-          runAsUser: 1000
-          allowPrivilegeEscalation: false
-        volumeMounts:
-        - name: tmp-dir
-          mountPath: /tmp
+        - args:
+            - --secure-port=10250
+            - --kubelet-insecure-tls
+            - --kubelet-preferred-address-types=InternalIP,InternalDNS,ExternalDNS,ExternalIP
+            - --kubelet-use-node-status-port
+            - --metric-resolution=15s
+            - --tls-cert-file=/etc/serving-cert/cert.pem
+            - --tls-private-key-file=/etc/serving-cert/key.pem
+          image: '{{ .InternalImages.Get "MetricsServer" }}'
+          imagePullPolicy: IfNotPresent
+          livenessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /livez
+              port: https
+              scheme: HTTPS
+            initialDelaySeconds: 0
+            periodSeconds: 10
+          name: metrics-server
+          ports:
+            - containerPort: 10250
+              name: https
+              protocol: TCP
+          readinessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /readyz
+              port: https
+              scheme: HTTPS
+            initialDelaySeconds: 20
+            periodSeconds: 10
+          resources:
+            requests:
+              cpu: 100m
+              memory: 200Mi
+          securityContext:
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
+            readOnlyRootFilesystem: true
+            runAsNonRoot: true
+            runAsUser: 1000
+            seccompProfile:
+              type: RuntimeDefault
+          volumeMounts:
+            - mountPath: /tmp
+              name: tmp
+            - mountPath: /etc/serving-cert
+              name: metrics-server-serving-cert
+              readOnly: true
+      priorityClassName: system-cluster-critical
+      serviceAccountName: metrics-server
+      tolerations:
+        - effect: NoSchedule
+          key: node-role.kubernetes.io/master
+          operator: Exists
+        - effect: NoSchedule
+          key: node-role.kubernetes.io/control-plane
+          operator: Exists
+      volumes:
+        - emptyDir: {}
+          name: tmp
         - name: metrics-server-serving-cert
-          mountPath: /etc/serving-cert
-          readOnly: true
-      nodeSelector:
-        kubernetes.io/os: linux
+          secret:
+            secretName: metrics-server-serving-cert
 ---
-apiVersion: v1
-kind: Service
+apiVersion: policy/v1
+kind: PodDisruptionBudget
 metadata:
+  labels:
+    app.kubernetes.io/instance: metrics-server
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/name: metrics-server
+    app.kubernetes.io/version: 0.7.0
+    helm.sh/chart: metrics-server-3.12.0
   name: metrics-server
   namespace: kube-system
 spec:
+  maxUnavailable: 1
   selector:
-    k8s-app: metrics-server
-  type: ClusterIP
-  ports:
-  - name: https
+    matchLabels:
+      app.kubernetes.io/instance: metrics-server
+      app.kubernetes.io/name: metrics-server
+---
+apiVersion: apiregistration.k8s.io/v1
+kind: APIService
+metadata:
+  labels:
+    app.kubernetes.io/instance: metrics-server
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/name: metrics-server
+    app.kubernetes.io/version: 0.7.0
+    helm.sh/chart: metrics-server-3.12.0
+  name: v1beta1.metrics.k8s.io
+spec:
+  group: metrics.k8s.io
+  groupPriorityMinimum: 100
+  insecureSkipTLSVerify: true
+  service:
+    name: metrics-server
+    namespace: kube-system
     port: 443
-    protocol: TCP
-    targetPort: https
+  version: v1beta1
+  versionPriority: 100
