Update and kustomize calico-vxlan
Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

--- a/addons/cni-canal/canal-config.yaml
+++ b/addons/cni-canal/canal-config.yaml
@@ -19,7 +19,7 @@ data:
   # Configure the MTU to use for workload interfaces and tunnels.
   # By default, MTU is auto-detected, and explicitly setting this field should not be required.
   # You can override auto-detection by providing a non-zero value.
-  veth_mtu: "{{ .Config.ClusterNetwork.CNI.Canal.MTU }}"
+  veth_mtu: "{{ default 0 .Config.ClusterNetwork.CNI.Canal.MTU }}"
 
   # The CNI network configuration to install on each node. The special
   # values in this config will be automatically populated.
