--- a/addons/cni-canal/canal.yaml
+++ b/addons/cni-canal/canal.yaml
@@ -3368,7 +3368,7 @@ spec:
             timeoutSeconds: 10
           resources:
             requests:
-              cpu: '{{ default .Params.RequestsCPU "250m" }}'
+              cpu: '{{ default "250m" .Params.RequestsCPU }}'
           securityContext:
             privileged: true
           volumeMounts:
