--- a/test/tests.yml
+++ b/test/tests.yml
@@ -75,105 +75,22 @@
 - scenario: install_containerd
   initVersion: v1.27.11
   infrastructures:
-    - name: aws_amzn
-    - name: aws_centos
-    - name: aws_default
-    - name: aws_flatcar
-    - name: aws_rhel
-    - name: aws_rockylinux
     - name: azure_centos
     - name: azure_default
     - name: azure_flatcar
     - name: azure_rhel
     - name: azure_rockylinux
-    - name: digitalocean_centos
-    - name: digitalocean_default
-    - name: digitalocean_rockylinux
-    - name: equinixmetal_centos
-    - name: equinixmetal_default
-    - name: equinixmetal_flatcar
-    - name: equinixmetal_rockylinux
     - name: gce_default
-    - name: hetzner_centos
-    - name: hetzner_default
-    - name: hetzner_rockylinux
-    - name: openstack_centos
-    - name: openstack_default
-    - name: openstack_flatcar
-    - name: openstack_rhel
-    - name: openstack_rockylinux
-    - name: vsphere_centos
-    - name: vsphere_default
-    - name: vsphere_flatcar
 
 - scenario: install_containerd
   initVersion: v1.28.7
   infrastructures:
-    - name: aws_amzn
-    - name: aws_centos
-    - name: aws_default
-    - name: aws_flatcar
-    - name: aws_rhel
-    - name: aws_rockylinux
     - name: azure_centos
     - name: azure_default
     - name: azure_flatcar
     - name: azure_rhel
     - name: azure_rockylinux
-    - name: digitalocean_centos
-    - name: digitalocean_default
-    - name: digitalocean_rockylinux
-    - name: equinixmetal_centos
-    - name: equinixmetal_default
-    - name: equinixmetal_flatcar
-    - name: equinixmetal_rockylinux
     - name: gce_default
-    - name: hetzner_centos
-    - name: hetzner_default
-    - name: hetzner_rockylinux
-    - name: openstack_centos
-    - name: openstack_default
-    - name: openstack_flatcar
-    - name: openstack_rhel
-    - name: openstack_rockylinux
-    - name: vsphere_centos
-    - name: vsphere_default
-    - name: vsphere_flatcar
-
-- scenario: install_containerd
-  initVersion: v1.29.2
-  infrastructures:
-    - name: aws_amzn
-    - name: aws_centos
-    - name: aws_default
-      runIfChanged: "(.prow/|addons/|examples/|hack/|pkg/|test/)"
-    - name: aws_flatcar
-    - name: aws_rhel
-    - name: aws_rockylinux
-    - name: azure_centos
-    - name: azure_default
-    - name: azure_flatcar
-    - name: azure_rhel
-    - name: azure_rockylinux
-    - name: digitalocean_centos
-    - name: digitalocean_default
-    - name: digitalocean_rockylinux
-    - name: equinixmetal_centos
-    - name: equinixmetal_default
-    - name: equinixmetal_flatcar
-    - name: equinixmetal_rockylinux
-    - name: gce_default
-    - name: hetzner_centos
-    - name: hetzner_default
-    - name: hetzner_rockylinux
-    - name: openstack_centos
-    - name: openstack_default
-    - name: openstack_flatcar
-    - name: openstack_rhel
-    - name: openstack_rockylinux
-    - name: vsphere_centos
-    - name: vsphere_default
-    - name: vsphere_flatcar
 
 ###################
 # CLUSTER UPGRADE #
@@ -183,21 +100,21 @@
   initVersion: v1.27.11
   upgradedVersion: v1.28.7
   infrastructures:
-    - name: aws_centos_stable
-    - name: aws_default_stable
-    - name: aws_flatcar_stable
-    - name: aws_rhel_stable
-    - name: aws_rockylinux_stable
+    - name: azure_centos_stable
+    - name: azure_default_stable
+    - name: azure_flatcar_stable
+    - name: azure_rhel_stable
+    - name: azure_rockylinux_stable
 
 - scenario: upgrade_containerd
   initVersion: v1.28.7
   upgradedVersion: v1.29.2
   infrastructures:
-    - name: aws_centos_stable
-    - name: aws_default_stable
-    - name: aws_flatcar_stable
-    - name: aws_rhel_stable
-    - name: aws_rockylinux_stable
+    - name: azure_centos_stable
+    - name: azure_default_stable
+    - name: azure_flatcar_stable
+    - name: azure_rhel_stable
+    - name: azure_rockylinux_stable
 
 - scenario: upgrade_containerd_external
   initVersion: v1.27.11
@@ -273,108 +190,6 @@
 # ALTERNATIVE CNI PLUGINS #
 ###########################
 
-- scenario: calico_containerd
-  initVersion: v1.27.11
-  infrastructures:
-    - name: aws_amzn
-    - name: aws_centos
-    - name: aws_default
-    - name: aws_flatcar
-    - name: aws_rhel
-    - name: aws_rockylinux
-    - name: azure_centos
-    - name: azure_default
-    - name: azure_flatcar
-    - name: azure_rhel
-    - name: azure_rockylinux
-    - name: digitalocean_centos
-    - name: digitalocean_default
-    - name: digitalocean_rockylinux
-    - name: equinixmetal_centos
-    - name: equinixmetal_default
-    - name: equinixmetal_flatcar
-    - name: equinixmetal_rockylinux
-    - name: gce_default
-    - name: hetzner_centos
-    - name: hetzner_default
-    - name: hetzner_rockylinux
-    - name: openstack_centos
-    - name: openstack_default
-    - name: openstack_flatcar
-    - name: openstack_rhel
-    - name: openstack_rockylinux
-    - name: vsphere_centos
-    - name: vsphere_default
-    - name: vsphere_flatcar
-
-- scenario: calico_containerd
-  initVersion: v1.28.7
-  infrastructures:
-    - name: aws_amzn
-    - name: aws_centos
-    - name: aws_default
-    - name: aws_flatcar
-    - name: aws_rhel
-    - name: aws_rockylinux
-    - name: azure_centos
-    - name: azure_default
-    - name: azure_flatcar
-    - name: azure_rhel
-    - name: azure_rockylinux
-    - name: digitalocean_centos
-    - name: digitalocean_default
-    - name: digitalocean_rockylinux
-    - name: equinixmetal_centos
-    - name: equinixmetal_default
-    - name: equinixmetal_flatcar
-    - name: equinixmetal_rockylinux
-    - name: gce_default
-    - name: hetzner_centos
-    - name: hetzner_default
-    - name: hetzner_rockylinux
-    - name: openstack_centos
-    - name: openstack_default
-    - name: openstack_flatcar
-    - name: openstack_rhel
-    - name: openstack_rockylinux
-    - name: vsphere_centos
-    - name: vsphere_default
-    - name: vsphere_flatcar
-
-- scenario: calico_containerd
-  initVersion: v1.29.2
-  infrastructures:
-    - name: aws_amzn
-    - name: aws_centos
-    - name: aws_default
-    - name: aws_flatcar
-    - name: aws_rhel
-    - name: aws_rockylinux
-    - name: azure_centos
-    - name: azure_default
-    - name: azure_flatcar
-    - name: azure_rhel
-    - name: azure_rockylinux
-    - name: digitalocean_centos
-    - name: digitalocean_default
-    - name: digitalocean_rockylinux
-    - name: equinixmetal_centos
-    - name: equinixmetal_default
-    - name: equinixmetal_flatcar
-    - name: equinixmetal_rockylinux
-    - name: gce_default
-    - name: hetzner_centos
-    - name: hetzner_default
-    - name: hetzner_rockylinux
-    - name: openstack_centos
-    - name: openstack_default
-    - name: openstack_flatcar
-    - name: openstack_rhel
-    - name: openstack_rockylinux
-    - name: vsphere_centos
-    - name: vsphere_default
-    - name: vsphere_flatcar
-
 - scenario: calico_containerd_external
   initVersion: v1.27.11
   infrastructures:
@@ -444,108 +259,6 @@
     - name: vsphere_flatcar
 
 - scenario: calico_containerd_external
-  initVersion: v1.29.2
-  infrastructures:
-    - name: aws_amzn
-    - name: aws_centos
-    - name: aws_default
-    - name: aws_flatcar
-    - name: aws_rhel
-    - name: aws_rockylinux
-    - name: azure_centos
-    - name: azure_default
-    - name: azure_flatcar
-    - name: azure_rhel
-    - name: azure_rockylinux
-    - name: digitalocean_centos
-    - name: digitalocean_default
-    - name: digitalocean_rockylinux
-    - name: equinixmetal_centos
-    - name: equinixmetal_default
-    - name: equinixmetal_flatcar
-    - name: equinixmetal_rockylinux
-    - name: gce_default
-    - name: hetzner_centos
-    - name: hetzner_default
-    - name: hetzner_rockylinux
-    - name: openstack_centos
-    - name: openstack_default
-    - name: openstack_flatcar
-    - name: openstack_rhel
-    - name: openstack_rockylinux
-    - name: vsphere_centos
-    - name: vsphere_default
-    - name: vsphere_flatcar
-
-- scenario: cilium_containerd
-  initVersion: v1.27.11
-  infrastructures:
-    - name: aws_amzn
-    - name: aws_centos
-    - name: aws_default
-    - name: aws_flatcar
-    - name: aws_rhel
-    - name: aws_rockylinux
-    - name: azure_centos
-    - name: azure_default
-    - name: azure_flatcar
-    - name: azure_rhel
-    - name: azure_rockylinux
-    - name: digitalocean_centos
-    - name: digitalocean_default
-    - name: digitalocean_rockylinux
-    - name: equinixmetal_centos
-    - name: equinixmetal_default
-    - name: equinixmetal_flatcar
-    - name: equinixmetal_rockylinux
-    - name: gce_default
-    - name: hetzner_centos
-    - name: hetzner_default
-    - name: hetzner_rockylinux
-    - name: openstack_centos
-    - name: openstack_default
-    - name: openstack_flatcar
-    - name: openstack_rhel
-    - name: openstack_rockylinux
-    - name: vsphere_centos
-    - name: vsphere_default
-    - name: vsphere_flatcar
-
-- scenario: cilium_containerd
-  initVersion: v1.28.7
-  infrastructures:
-    - name: aws_amzn
-    - name: aws_centos
-    - name: aws_default
-    - name: aws_flatcar
-    - name: aws_rhel
-    - name: aws_rockylinux
-    - name: azure_centos
-    - name: azure_default
-    - name: azure_flatcar
-    - name: azure_rhel
-    - name: azure_rockylinux
-    - name: digitalocean_centos
-    - name: digitalocean_default
-    - name: digitalocean_rockylinux
-    - name: equinixmetal_centos
-    - name: equinixmetal_default
-    - name: equinixmetal_flatcar
-    - name: equinixmetal_rockylinux
-    - name: gce_default
-    - name: hetzner_centos
-    - name: hetzner_default
-    - name: hetzner_rockylinux
-    - name: openstack_centos
-    - name: openstack_default
-    - name: openstack_flatcar
-    - name: openstack_rhel
-    - name: openstack_rockylinux
-    - name: vsphere_centos
-    - name: vsphere_default
-    - name: vsphere_flatcar
-
-- scenario: cilium_containerd
   initVersion: v1.29.2
   infrastructures:
     - name: aws_amzn
@@ -615,76 +328,6 @@
 
 - scenario: cilium_containerd_external
   initVersion: v1.28.7
-  infrastructures:
-    - name: aws_amzn
-    - name: aws_centos
-    - name: aws_default
-    - name: aws_flatcar
-    - name: aws_rhel
-    - name: aws_rockylinux
-    - name: azure_centos
-    - name: azure_default
-    - name: azure_flatcar
-    - name: azure_rhel
-    - name: azure_rockylinux
-    - name: digitalocean_centos
-    - name: digitalocean_default
-    - name: digitalocean_rockylinux
-    - name: equinixmetal_centos
-    - name: equinixmetal_default
-    - name: equinixmetal_flatcar
-    - name: equinixmetal_rockylinux
-    - name: gce_default
-    - name: hetzner_centos
-    - name: hetzner_default
-    - name: hetzner_rockylinux
-    - name: openstack_centos
-    - name: openstack_default
-    - name: openstack_flatcar
-    - name: openstack_rhel
-    - name: openstack_rockylinux
-    - name: vsphere_centos
-    - name: vsphere_default
-    - name: vsphere_flatcar
-
-- scenario: upgrade_cilium_containerd
-  initVersion: v1.27.11
-  upgradedVersion: v1.28.7
-  infrastructures:
-    - name: aws_amzn
-    - name: aws_centos
-    - name: aws_default
-    - name: aws_flatcar
-    - name: aws_rhel
-    - name: aws_rockylinux
-    - name: azure_centos
-    - name: azure_default
-    - name: azure_flatcar
-    - name: azure_rhel
-    - name: azure_rockylinux
-    - name: digitalocean_centos
-    - name: digitalocean_default
-    - name: digitalocean_rockylinux
-    - name: equinixmetal_centos
-    - name: equinixmetal_default
-    - name: equinixmetal_flatcar
-    - name: equinixmetal_rockylinux
-    - name: gce_default
-    - name: hetzner_centos
-    - name: hetzner_default
-    - name: hetzner_rockylinux
-    - name: openstack_centos
-    - name: openstack_default
-    - name: openstack_flatcar
-    - name: openstack_rhel
-    - name: openstack_rockylinux
-    - name: vsphere_centos
-    - name: vsphere_default
-    - name: vsphere_flatcar
-
-- scenario: upgrade_cilium_containerd
-  initVersion: v1.28.7
-  upgradedVersion: v1.29.2
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -801,7 +444,7 @@
   infrastructures:
     - name: aws_long_timeout_default
 
-- scenario: conformance_containerd
+- scenario: conformance_containerd_external
   initVersion: v1.29.2
   infrastructures:
     - name: aws_long_timeout_default
@@ -814,21 +457,6 @@
 ######################################
 # LEGACY MACHINE-CONTROLLER / NO OSM #
 ######################################
-
-- scenario: legacy_machine_controller_containerd
-  initVersion: v1.27.11
-  infrastructures:
-    - name: aws_default
-
-- scenario: legacy_machine_controller_containerd
-  initVersion: v1.28.7
-  infrastructures:
-    - name: aws_default
-
-- scenario: legacy_machine_controller_containerd
-  initVersion: v1.29.2
-  infrastructures:
-    - name: aws_default
 
 - scenario: legacy_machine_controller_containerd_external
   initVersion: v1.27.11
@@ -905,14 +533,11 @@
 - scenario: csi_ccm_migration
   initVersion: v1.27.11
   infrastructures:
-    - name: aws_default
+    - name: azure_default
+    - name: gce_default
 
 - scenario: csi_ccm_migration
   initVersion: v1.28.7
   infrastructures:
-    - name: aws_default
-
-- scenario: csi_ccm_migration
-  initVersion: v1.29.2
-  infrastructures:
-    - name: aws_default
+    - name: azure_default
+    - name: gce_default
