--- a/test/tests.yml
+++ b/test/tests.yml
@@ -140,6 +140,7 @@
     - name: azure_flatcar_stable
     - name: azure_rhel_stable
     - name: azure_rockylinux_stable
+    - name: gce_default
 
 - scenario: upgrade_containerd_external
   initVersion: v1.27.11
